Add analytics to measure success of community engagement activities

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,5 +18,12 @@
 		<script src="{{ "/" | relative_url }}assets/js/thirdparty/jquery-3.3.1.min.js"></script>
 		<script src="{{ "/" | relative_url }}assets/js/thirdparty/popper.min.js"></script>
 		<script src="{{ "/" | relative_url }}assets/js/thirdparty/bootstrap.min.js"></script>
+		
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'UA-158060375-2');
+		</script>
 	</body>
 </html>
