--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,8 @@
 		<link href="{{ "/" | relative_url }}assets/css/content.css" rel="stylesheet" type="text/css">
 		<link href="{{ "/" | relative_url }}assets/css/responsive.css" rel="stylesheet" type="text/css">
 		<link href="{{ "/" | relative_url }}assets/css/code.css" rel="stylesheet" type="text/css">
+		
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158060375-2"></script>
 	</head>
 	
 	<body class="page-{{ page.pageclass | escape }}">
