Update copyright year in site footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
 					</ul>
 				</nav>
 				
-				<p>Copyright &copy; 2019, Adam Rehn and the Unreal Containers community contributors. Unless otherwise noted, all content on this site is licensed under a <a class="text-light" rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+				<p>Copyright &copy; 2019 - {{ site.time | date: '%Y' }}, Adam Rehn and the Unreal Containers community contributors. Unless otherwise noted, all content on this site is licensed under a <a class="text-light" rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 				<p>Docker and the Docker logo are trademarks or registered trademarks of Docker in the United States and other countries.</p>
 				<p>Unreal and its logo are Epic Games' trademarks or registered trademarks in the US and elsewhere.</p>
 			</div>
