Add scrollbars to horizontally overflowing tables on mobile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
 <main>
 	<article class="container">
 		
-		{{ content }}
+		{% include postprocessing.html content=content %}
 		
 	</article>
 </main>
