Tweak code font size on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -43,6 +43,10 @@
 		font-size: 0.8rem;
 	}
 	
+	article pre, article pre code {
+		font-size: 0.8rem;
+	}
+	
 	#navtoggle
 	{
 		font-size: 1.5rem;
