--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 {% capture _alert_content %}
 <p>
 	Posted by <strong>{{ page.author | escape }}</strong> on {{ page.date | date: '%e %B %Y' }}<br>
-	Last updated on {{ page.updated | date: '%e %B %Y' }}
+	Last updated on {{ page.updated | date: '%e %B %Y' }} (<a href="https://github.com/UnrealContainers/unrealcontainers.github.io/commits/master/collections/{{ page.relative_path | uri_escape }}">changelog</a>)
 </p>
 {% endcapture %}
 {% include alerts/post-metadata.html content=_alert_content %}
