--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
 	<div class="nav-wrapper-outer container">
 		<div class="container">
 			<div class="nav-wrapper-inner">
-				<p class="logos">
-					<a href="{{ "/" | relative_url }}"><img src="{{ "/" | relative_url }}assets/images/logos-compact.svg" alt="Unreal Engine and Docker Logos"></a>
+				<p class="logo">
+					<a href="{{ "/" | relative_url }}"><img src="{{ "/" | relative_url }}assets/images/logo.svg" alt="Unreal Containers community hub logo"></a>
 				</p>
 				<p id="navtoggle">
 					<a data-toggle="collapse" href="nav" role="button" aria-expanded="false" aria-controls="nav"><span class="fas fa-bars" title="Toggle navigation"></span></a>
