--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@
 	
 	<section class="jumbotron jumbotron-fluid mb-0">
 		
-		<p class="logos"><img src="{{ "/" | relative_url }}assets/images/logos-full.svg" alt="Unreal Engine and Docker Logos"></p>
+		<p class="logo"><img src="{{ "/" | relative_url }}assets/images/logo.svg" alt="Unreal Containers community hub logo"></p>
 		<h1>The most powerful creation engine comes to the cloud.</h1>
 		<p class="lead">{{ page.tagline | escape }}</p>
 		
